smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/invalid-absolute-multi-use.smithy
// Multi-use statement values must be relative. Found: foo.bar#Baz
$version: "0.1.0"

use shape invalid#[foo.bar#Baz]
